--- a/EduValDev.html
+++ b/EduValDev.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="en">
 
 <head>
 
@@ -7,8 +7,11 @@
     <meta content="width=device-width, intial-cale=1.0" name="viewport">
 
     <title>Eduardo Valderrama - Portfolio Details</title>
-    <meta content="Portfolio profesional Eduardo Valderrama Murillo" name"description">
+    <meta content="Portfolio profesional Eduardo Valderrama Murillo" name="description">
     <meta content="Software Engineer, Teach Lead, C#, FullStack, Backend Developer, Frontend Developer,HTML, CSS, JavaScript" name="keywords">
+
+      <!-- Favicons -->
+    <link href="assets/img/LogoCircularFondoNegro3.png" rel="icon">  
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -16,13 +19,28 @@
      <!-- CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
 
-     <!-- Vendor CSS Files 
+     <!-- Vendor CSS Files -->
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">-->
-
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
 </head>
+<body>
+
+    <header id="header" class="d-flex flex-column justify-content-center"></header>
+
+    <nav id="navbar" class="navbar nav-menu">
+        <ul>
+          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <!--<li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>          
+          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>-->
+          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        </ul>
+
+</body>
+</html>
