--- a/index.html
+++ b/index.html
@@ -101,55 +101,8 @@
           </div>
   
         </div>
-      </section><!-- End About Section -->
-  
-      <!-- ======= Facts Section ======= -->
-      <section id="facts" class="facts">
-        <div class="container" data-aos="fade-up">
-  
-          <div class="section-title">
-            <h2>Facts</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-          </div>
-  
-          <div class="row">
-  
-            <div class="col-lg-3 col-md-6">
-              <div class="count-box">
-                <i class="bi bi-emoji-smile"></i>
-                <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Happy Clients</p>
-              </div>
-            </div>
-  
-            <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
-              <div class="count-box">
-                <i class="bi bi-journal-richtext"></i>
-                <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Projects</p>
-              </div>
-            </div>
-  
-            <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-              <div class="count-box">
-                <i class="bi bi-headset"></i>
-                <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Hours Of Support</p>
-              </div>
-            </div>
-  
-            <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-              <div class="count-box">
-                <i class="bi bi-award"></i>
-                <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Awards</p>
-              </div>
-            </div>
-  
-          </div>
-  
-        </div>
-      </section><!-- End Facts Section -->
+      </section>
+     
   
       <!-- ======= Skills Section ======= -->
       <section id="skills" class="skills section-bg">
@@ -544,74 +497,62 @@
               <div class="swiper-slide">
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                  <h3>Saul Goodman</h3>
-                  <h4>Ceo &amp; Founder</h4>
+                  <h3>Aaron Peralo</h3>
+                  <h4>Consultor Gestion de activos</h4>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                    Eduardo es un gran profesional, tiene unos valores perfectos para el trabajo en equipo como comprensión, cooperación e implicación, también individualmente se esfuerza al 200% para que todo quede perfecto, sin duda es una persona que es de agradecer estar codo con codo.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
-              </div><!-- End testimonial item -->
+              </div>
   
               <div class="swiper-slide">
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                  <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
+                  <h3>Raúl Barriga López</h3>
+                  <h4>Senior Experience Lead, Strategic Designer , Product & Service Design, Design Researcher</h4>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                    He trabajado con Eduardo, pegandonos con el código y te facilita mucho las cosas, además tiene una gran curiosidad por aprender aunque no sea su campo. un buen compañero, hace el ambiente distendido, siempre con una sonrisa.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
-              </div><!-- End testimonial item -->
+              </div>
   
               <div class="swiper-slide">
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                  <h3>Jena Karlis</h3>
-                  <h4>Store Owner</h4>
+                  <h3>Samuel Sanchez Cruz</h3>
+                  <h4>Técnico informático en ADIF - Dirección planificación de personal</h4>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                    Eduardo es un trabajador comprometido con su trabajo, capaz de desempeñar cualquier tarea aunque suponga adquirir conocimientos en campos en los que no tiene experiencia. Tiene un alta capacidad de trabajar en grupo, capaz de generar buen ambiente. 
+                    Recomendaria a Eduardo para desarrollo de nuevas aplicaciones en .Net.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
-              </div><!-- End testimonial item -->
+              </div>
   
               <div class="swiper-slide">
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                  <h3>Matt Brandon</h3>
-                  <h4>Freelancer</h4>
+                  <h3>Juan Benavides Romero</h3>
+                  <h4>Chief Technology Officer en gibobs allbanks</h4>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                    He trabajado con el durante casi 2 años y puedo decir que es un gran profesional. Es una persona que se adapta muy bien a cambios de tecnología y que aprende rápidamente nuevos procesos y metodologías. Además de lo anterior, es una persona con la que es fácil formar un grupo de trabajo y ya que anima al equipo, creando un buen ambiente de trabajo, que sumado a sus conocimientos y constancia en el trabajo, lo convierte en un gran profesional.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
-              </div><!-- End testimonial item -->
-  
-              <div class="swiper-slide">
-                <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                  <h3>John Larson</h3>
-                  <h4>Entrepreneur</h4>
-                  <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  </p>
-                </div>
-              </div><!-- End testimonial item -->
+              </div>              
   
             </div>
             <div class="swiper-pagination"></div>
           </div>
   
         </div>
-      </section><!-- End Testimonials Section -->
+      </section>
   
       <!-- ======= Contact Section ======= -->
       <section id="contact" class="contact">
@@ -628,20 +569,14 @@
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>Alcala de Henares, Madrid, 28806</p>
                 </div>
   
                 <div class="email">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>info@example.com</p>
-                </div>
-  
-                <div class="phone">
-                  <i class="bi bi-phone"></i>
-                  <h4>Call:</h4>
-                  <p>+1 5589 55488 55s</p>
-                </div>
+                  <p>eduval.dev@gmail.com</p>
+                </div>                
   
               </div>
   
@@ -677,34 +612,27 @@
           </div>
   
         </div>
-      </section><!-- End Contact Section -->
+      </section>
   
-    </main><!-- End #main -->
+    </main>
   
     <!-- ======= Footer ======= -->
     <footer id="footer">
       <div class="container">
-        <h3>Brandon Johnson</h3>
-        <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
-        <div class="social-links">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <h3>Eduardo Valderrama </h3>
+        <p>EduVal.Dev</p>
+        <div class="social-links">          
+          <a href="https://www.linkedin.com/in/eduardovalderramamurillo/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/Eduval84" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://www.instagram.com/eduval.dev/" class="instagram"><i class="bx bxl-instagram"></i></a>          
         </div>
         <div class="copyright">
-          &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: [license-url] -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          &copy; Copyright <strong><span>Eduardo Valderrama</span></strong>. All Rights Reserved
+        </div>                 
+          Designed by <a href="https://eduval.dev/">Eduval.dev</a>
         </div>
       </div>
-    </footer><!-- End Footer -->
+    </footer>
   
     <div id="preloader"></div>
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
