--- a/index.html
+++ b/index.html
@@ -110,24 +110,63 @@
   
           <div class="section-title">
             <h2>Skills</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            <p>I have more than 15 years of experience in .Net Framework applications developlment with Microsofot Visual Studio (2003 to 2022 version). SQL, API Rest, HTML5, CSS, bootstrap, JavaScript, Angular, VUE, Distributed Version Control Systems ( Git , SubVersion, TFS), Entity Framework.</p>
           </div>
   
           <div class="row skills-content">
-  
+
             <div class="col-lg-6">
   
               <div class="progress">
-                <span class="skill">HTML <i class="val">100%</i></span>
+                <span class="skill">C# <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
   
               <div class="progress">
-                <span class="skill">CSS <i class="val">90%</i></span>
+                <span class="skill">SQL <i class="val">85%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+  
+              <div class="progress">
+                <span class="skill">API Rest <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+
+              <div class="progress">                
+                <span class="skill">Java <i class="val">60%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill">Entity Framework <i class="val">85%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+  
+            </div>
+  
+            <div class="col-lg-6">
+  
+              <div class="progress">
+                <span class="skill">HTML 5<i class="val">80%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+  
+              <div class="progress">
+                <span class="skill">CSS <i class="val">70%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
   
@@ -137,33 +176,22 @@
                   <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
-  
-            </div>
-  
-            <div class="col-lg-6">
-  
+
               <div class="progress">
-                <span class="skill">PHP <i class="val">80%</i></span>
+                <span class="skill">Angular <i class="val">40%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
-  
+
               <div class="progress">
-                <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+                <span class="skill">VUE <i class="val">65%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
-  
-              <div class="progress">
-                <span class="skill">Photoshop <i class="val">55%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-  
-            </div>
+
+            </div>           
   
           </div>
   
@@ -481,7 +509,7 @@
           </div>
   
         </div>
-      </section><!-- End Services Section -->
+      </section>
   
       <!-- ======= Testimonials Section ======= -->
       <section id="testimonials" class="testimonials section-bg">
