--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   
           <div class="section-title">
             <h2>Skills</h2>
-            <p>I have more than 15 years of experience in .Net Framework applications developlment with Microsofot Visual Studio (2003 to 2022 version). SQL, API Rest, HTML5, CSS, bootstrap, JavaScript, Angular, VUE, Distributed Version Control Systems ( Git , SubVersion, TFS), Entity Framework.</p>
+            <p>I have experience working with .Net Framework applications developlment with Microsofot Visual Studio (2003 to 2022 versions). SQL, API Rest, HTML5, CSS, bootstrap, JavaScript, Angular, VUE, Distributed Version Control Systems ( Git , SubVersion, TFS), Entity Framework.</p>
           </div>
   
           <div class="row skills-content">
@@ -204,14 +204,14 @@
   
           <div class="section-title">
             <h2>Resume</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            <p>Innovative and quality-oriented software engineer, understanding the domain and customer needs with 15+ years of experience designing and developing user-centered software from initial concept to final and polished delivery. Experience in project and team management. Maintenance of high demand applications.</p>
           </div>
   
           <div class="row">
             <div class="col-lg-6">
               <h3 class="resume-title">Sumary</h3>
               <div class="resume-item pb-0">
-                <h4>Brandon Johnson</h4>
+                <h4>Eduardo Valderrama</h4>
                 <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
                 <ul>
                   <li>Portland par 127,Orlando, FL</li>
