--- a/index.html
+++ b/index.html
@@ -203,8 +203,7 @@
         <div class="container" data-aos="fade-up">
   
           <div class="section-title">
-            <h2>Resume</h2>
-            <p>Innovative and quality-oriented software engineer, understanding the domain and customer needs with 15+ years of experience designing and developing user-centered software from initial concept to final and polished delivery. Experience in project and team management. Maintenance of high demand applications.</p>
+            <h2>Resume</h2>            
           </div>
   
           <div class="row">
@@ -212,11 +211,10 @@
               <h3 class="resume-title">Sumary</h3>
               <div class="resume-item pb-0">
                 <h4>Eduardo Valderrama</h4>
-                <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+                <p><em>Innovative and quality-oriented software engineer, understanding the domain and customer needs with 15+ years of experience designing and developing user-centered software from initial concept to final and polished delivery. Experience in project and team management. Maintenance of high demand applications.</em></p>
                 <ul>
-                  <li>Portland par 127,Orlando, FL</li>
-                  <li>(123) 456-7891</li>
-                  <li>alice.barkley@example.com</li>
+                  <li>Alcala de Henares,Madrid , Spain</li>                  
+                  <li>EduVal.dev@google.com</li>
                 </ul>
               </div>
   
