--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               </div>
 
               <div class="progress">
-                <span class="skill">Entity Framework <i class="val">85%</i></span>
+                <span class="skill">CI/CD <i class="val">85%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -211,7 +211,7 @@
               <h3 class="resume-title">Sumary</h3>
               <div class="resume-item pb-0">
                 <h4>Eduardo Valderrama</h4>
-                <p><em>Innovative and quality-oriented software engineer, understanding the domain and customer needs with 15+ years of experience designing and developing user-centered software from initial concept to final and polished delivery. Experience in project and team management. Maintenance of high demand applications.</em></p>
+                <p>Innovative and quality-oriented software engineer, understanding the domain and customer needs with 15+ years of experience designing and developing user-centered software from initial concept to final and polished delivery.Experience in project and team management. Creation & support of high demand applications.</p>                
                 <ul>
                   <li>Alcala de Henares,Madrid , Spain</li>                  
                   <li>EduVal.dev@google.com</li>
