Update resume tittle

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   
           <div class="section-title">
             <h2>Skills</h2>
-            <p>I have experience working with .Net Framework applications developlment with Microsofot Visual Studio (2003 to 2022 versions). SQL, API Rest, HTML5, CSS, bootstrap, JavaScript, Angular, VUE, Distributed Version Control Systems ( Git , SubVersion, TFS), Entity Framework.</p>
+            <p>My specialty is backend oriented development but I have no problem getting out of my comfort zone and researching new frameworks and challenges. I have experience working with .Net Framework applications developlment with Microsofot Visual Studio (2003 to 2022 versions). SQL, API Rest, HTML5, CSS, bootstrap, JavaScript, Angular, VUE, Distributed Version Control Systems ( Git , SubVersion, TFS), Entity Framework.</p>
           </div>
   
           <div class="row skills-content">
