Se han añadido nuevos testimonios

--- a/index.html
+++ b/index.html
@@ -517,8 +517,48 @@
             <h2>Testimonials</h2>
           </div>
   
-          <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
+          <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="80">
             <div class="swiper-wrapper">
+
+              <div class="swiper-slide">
+                <div class="testimonial-item">
+                  <img src="assets/img/testimonials/DanielMerillas.jpeg" class="testimonial-img" alt="">
+                  <h3>Daniel Merillas</h3>
+                  <h4>Arquitecto Sharepoint/Microsoft 365 en Minsait</h4>
+                  <p>
+                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                    Eduardo es un gran profesional con una dilatada experiencia en el ámbito de la programación. Siempre busca la solución adecuada para cada problema. Tiene un don para lidera equipos, sacando lo mejor de ellos y manteniendo los motivados.
+                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  </p>
+                </div>
+              </div>
+
+              
+              <div class="swiper-slide">
+                <div class="testimonial-item">
+                  <img src="assets/img/testimonials/DanielMerillas.jpeg" class="testimonial-img" alt="">
+                  <h3>Mario Méndez Diego</h3>
+                  <h4>Team Leader at NTTDATA</h4>
+                  <p>
+                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                    Como compañero Eduardo es una persona que se preocupa por la gente con la que trabaja intentando ayudar a crecer a todo el que esta a su cargo y en mi caso también no estándolo, ya que Eduardo es de las personas que hacen equipo, su curiosidad hace que siempre esté innovando buscando siempre la mejor solución a los problemas que se le plantean. 
+                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  </p>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="testimonial-item">
+                  <img src="assets/img/testimonials/Carlos Alfaya.jpg" class="testimonial-img" alt="">
+                  <h3>Carlos Alfaya Martinez</h3>
+                  <h4>Gerente Responsable de Equipo en Minsait</h4>
+                  <p>
+                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                    Eduardo es muy responsable, se involucra en los proyectos apoyando siempre a sus compañeros, es un trabajador eficiente. Tiene gran capacidad para sacar el trabajo adelante con un excelente rendimiento. Comprometido y proactivo, tiene una gran visión estratégica.
+                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  </p>
+                </div>
+              </div>
   
               <div class="swiper-slide">
                 <div class="testimonial-item">
