Se han añadido Resumen

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
   
           <div class="section-title">
             <h2>About</h2>
-            <p>I'm a software engineer with extensive experience in team and project management, As Technical Lead I have experience in the creation and coordination of teams in Agile and waterfall model, 
+            <p>I'm a software engineer with extensive experience in team and project management. As Technical or Team Lead I have experience in the creation and coordination of teams in Agile and waterfall model, 
               coordination with end customers and design of backend architectures. </p>
-            <p>As Senior Backend Developer I have more than 15 years of experience in design, testing and software maintenace .</p>            
+            <p>As Senior Backend Developer I have +15 years of experience in design, testing and software maintenace .</p>            
           </div>
   
           <div class="row">
@@ -101,8 +101,7 @@
           </div>
   
         </div>
-      </section>
-     
+      </section>   
   
       <!-- ======= Skills Section ======= -->
       <section id="skills" class="skills section-bg">
@@ -110,7 +109,7 @@
   
           <div class="section-title">
             <h2>Skills</h2>
-            <p>My specialty is backend oriented development but I have no problem getting out of my comfort zone and researching new frameworks and challenges. I have experience working with .Net Framework applications developlment with Microsofot Visual Studio (2003 to 2022 versions). SQL, API Rest, HTML5, CSS, bootstrap, JavaScript, Angular, VUE, Distributed Version Control Systems ( Git , SubVersion, TFS), Entity Framework.</p>
+            <p>I am a backend developer, but I have no problem going out of my comfort zone to learn new languages or frameworks. I have experience working with .Net Framework applications developed with Microsofot Visual Studio (versions 2003 to 2022). SQL, API Rest, HTML5, CSS, bootstrap, JavaScript, Angular, VUE, Distributed Version Control Systems (Git, SubVersion, TFS), Entity Framework.</p>
           </div>
   
           <div class="row skills-content">
@@ -216,44 +215,73 @@
                   <li>Alcala de Henares,Madrid , Spain</li>                  
                   <li>EduVal.dev@google.com</li>
                 </ul>
-              </div>
-  
+              </div>          
               <h3 class="resume-title">Education</h3>
               <div class="resume-item">
-                <h4>Master of Fine Arts &amp; Graphic Design</h4>
-                <h5>2015 - 2016</h5>
-                <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+                <h4>Superior Degree of Computer Applications Development</h4>
+                <h5>2005 - 2007</h5>
+                <p><em>IES Alonso Avellaneda</em></p>                
               </div>
               <div class="resume-item">
-                <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-                <h5>2010 - 2014</h5>
-                <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+                <h4>Web application development with AngularJS</h4>
+                <h5>2016</h5>
+                <p><em>CampusMVP</em></p>                
               </div>
             </div>
             <div class="col-lg-6">
               <h3 class="resume-title">Professional Experience</h3>
               <div class="resume-item">
-                <h4>Senior graphic design specialist</h4>
-                <h5>2019 - Present</h5>
-                <p><em>Experion, New York, NY </em></p>
+                <h4>Teach Lead</h4>
+                <h5>Jan 2022 - Present</h5>
+                <p><em><a href="https://www.linkedin.com/company/grupo-domingo-alonso/mycompany/verification/">Domingo Alonso Group</a></em></p>
                 <ul>
-                  <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                  <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                  <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                  <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                  <li>Lead the design, development and implementation of Diler, the group's web sales assistant.</li>
+                  <li>Develop tasks together with the other members of the development team and advise on all aspects of the project. </li>
+                  <li>Oversee the evaluation and career development of all team members..</li>
+                  <li>Define together with the rest of the Teach Leads the quality standard to be followed by the company, the technological roadmap and review/improve existing processes .</li>
                 </ul>
               </div>
               <div class="resume-item">
-                <h4>Graphic design specialist</h4>
-                <h5>2017 - 2018</h5>
-                <p><em>Stepping Stone Advertising, New York, NY</em></p>
+                <h4>Team Lead</h4>
+                <h5>Mar 2017 - Jan 2022</h5>
+                <p><em><a href="https://www.linkedin.com/company/ntt-data-europe-latam/">NTT DATA Europe & Latam</a></em></p>
                 <ul>
-                  <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                  <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                  <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                  <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                  <li>Management of requirements, scope, deadlines, equipment, and quality of software developments.</li>
+                  <li>Productivity control, effort estimation and knowledge transfer (functional, technical, and methodological) to the development team.</li>
+                  <li>Ensure code/design/architecture reviews happen on teams and that work follows established best practices and standards. </li>
+                  <li>Manage Support Team with 24 * 7 servic</li>
+                </ul>
+              </div>
+              <div class="resume-item">
+                <h4>Senior Engineer</h4>
+                <h5>Feb 2016 - Oct 2016</h5>
+                <p><em>DocQuijote</em></p>
+                <ul>
+                  <li>Requirements gathering, analysis of the current application to perform the development and migration to a more modern DDD architecture and in the cloud..</li>              
+                </ul>
+              </div>
+              <div class="resume-item">
+                <h4>Senior Engineer</h4>
+                <h5>Oct 2015 - Feb 2016</h5>
+                <p><em>Grupo Marzo</em></p>
+                <ul>
+                  <li>Senior Developer for <a href="https://www.linkedin.com/search/results/all/?heroEntityKey=urn%3Ali%3Aorganization%3A10187994&keywords=atresmedia&origin=RICH_QUERY_SUGGESTION&position=0&searchId=c8854c48-d1f8-4b67-a0bc-59f91854913a&sid=XD1">Atresmedia.</a></li>              
+                </ul>
+              </div>
+              <div class="resume-item">
+                <h4>Engineer - Senior Engineer</h4>
+                <h5>Sept 2012 - Aug 2015</h5>
+                <p><em>Nextel engineering Systems (Technology Consulting)</em></p>
+                <ul>
+                  <li>Developer for clients such as <a href="https://www.linkedin.com/company/indra/">Indra</a>, <a href="https://www.linkedin.com/company/dragados-sa/">Dragados</a>, <a href="https://www.linkedin.com/company/indra/">Indra</a>, <a href="https://www.linkedin.com/company/procuradores/">Consejo General de Procuradores de España</a>, <a href="https://www.linkedin.com/company/acs-solutions/">ACS</a></li>              
+                </ul>
+              </div>
+              <div class="resume-item">
+                <h4>Engineer </h4>
+                <h5>Oct 2007 - Jul 2009</h5>
+                <p><em><a href="https://www.linkedin.com/company/muchoviaje/">Muchoviaje</a></em></p>
+                <ul>
+                  <li>Web developer for the number 1 travel agency in the market.</a></li>              
                 </ul>
               </div>
             </div>
@@ -263,7 +291,7 @@
       </section><!-- End Resume Section -->
   
       <!-- ======= Portfolio Section ======= -->
-      <section id="portfolio" class="portfolio section-bg">
+      <!-- <section id="portfolio" class="portfolio section-bg">
         <div class="container" data-aos="fade-up">
   
           <div class="section-title">
@@ -413,9 +441,9 @@
           </div>
   
         </div>
-      </section><!-- End Portfolio Section -->
+      </section>End Portfolio Section -->
   
-      <!-- ======= Services Section ======= -->
+      <!-- ======= Services Section ======= 
       <section id="services" class="services">
         <div class="container" data-aos="fade-up">
   
@@ -507,7 +535,7 @@
           </div>
   
         </div>
-      </section>
+      </section>-->
   
       <!-- ======= Testimonials Section ======= -->
       <section id="testimonials" class="testimonials section-bg">
@@ -536,7 +564,7 @@
               
               <div class="swiper-slide">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/DanielMerillas.jpeg" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/Mario.jpeg" class="testimonial-img" alt="">
                   <h3>Mario Méndez Diego</h3>
                   <h4>Team Leader at NTTDATA</h4>
                   <p>
