--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utl-8">
     <meta content="width=device-width, intial-cale=1.0" name="viewport">
 
@@ -11,7 +10,8 @@
     <meta content="Software Engineer portfolio of Eduardo Valderrama Murillo, Teach Lead, C#, FullStack, Backend Developer, Frontend Developer,HTML, CSS, JavaScript, Professional developer with more than 15 years of experience" name="keywords">
 
       <!-- Favicons -->
-    <link href="assets/img/EvLogoCreative.png" rel="icon">      
+    <link href="assets/img/EvLogoCreative.png" rel="icon"> 
+    <link href="assets/img/EvLogoCreative.png" rel="apple-touch-icon">     
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -29,7 +29,10 @@
 
 </head>
 <body>
-
+    <!-- ======= Mobile nav toggle button ======= -->
+    <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
+    <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
+    <!-- ======= Header ======= -->
     <header id="header" class="d-flex flex-column justify-content-center">
       <!-- .nav-menu -->
       <nav id="navbar" class="navbar nav-menu">
