--- a/index.html
+++ b/index.html
@@ -230,6 +230,15 @@
                 <h5>2016</h5>
                 <p><em>CampusMVP</em></p>                
               </div>
+              <h3 class="resume-title">Language Proficiency</h3>
+              <div class="resume-item">
+                <h4>English</h4>
+                <h5>Professional working proficiency</h5>                         
+              </div>
+              <div class="resume-item">
+                <h4>Spanish</h4>
+                <h5>Native</h5>                             
+              </div>
             </div>
             <div class="col-lg-6">
               <h3 class="resume-title">Professional Experience</h3>
@@ -681,7 +690,7 @@
   
             <div class="col-lg-8 mt-5 mt-lg-0">
   
-              <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+              <form action="mailto:eduval.dev@gmail.com" method="GET">
                 <div class="row">
                   <div class="col-md-6 form-group">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -694,16 +703,10 @@
                   <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
                 </div>
                 <div class="form-group mt-3">
-                  <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-                </div>
-                <div class="my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-                </div>
-                <div class="text-center"><button type="submit">Send Message</button></div>
-              </form>
-  
+                  <textarea class="form-control" name="body" rows="5" placeholder="Message" required></textarea>
+                </div>                
+                <div class="text-center"><input target="_blank" class="btn btn-primary" type="submit" value="Send Email" /></div>
+              </form>                 
             </div>
   
           </div>
