--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@
               </div>
   
               <div class="progress">
-                <span class="skill">CSS <i class="val">70%</i></span>
+                <span class="skill">CSS <i class="val">75%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
   
               <div class="progress">
-                <span class="skill">JavaScript <i class="val">75%</i></span>
+                <span class="skill">JavaScript <i class="val">60%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -187,7 +187,7 @@
               </div>
 
               <div class="progress">
-                <span class="skill">VUE <i class="val">65%</i></span>
+                <span class="skill">VUE <i class="val">60%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -303,12 +303,12 @@
       </section><!-- End Resume Section -->
   
       <!-- ======= Portfolio Section ======= -->
-      <!-- <section id="portfolio" class="portfolio section-bg">
+      <section id="portfolio" class="portfolio section-bg">
         <div class="container" data-aos="fade-up">
   
           <div class="section-title">
             <h2>Portfolio</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            <p>Some projects in which I have participated.</p>
           </div>
   
           <div class="row">
@@ -453,7 +453,7 @@
           </div>
   
         </div>
-      </section>End Portfolio Section -->
+      </section><!--End Portfolio Section -->
   
       <!-- ======= Services Section ======= 
       <section id="services" class="services">
