changed profile image

--- a/index.html
+++ b/index.html
@@ -71,11 +71,10 @@
             <p>I'm a software engineer with extensive experience in team and project management. As Technical or Team Lead I have experience in the creation and coordination of teams in Agile and waterfall model, 
               coordination with end customers and design of backend architectures. </p>
             <p>As Senior Backend Developer I have +15 years of experience in design, testing and software maintenace .</p>            
-          </div>
-  
+          </div>  
           <div class="row">
             <div class="col-lg-4">
-              <img src="assets/img/profile-img.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/profile-img2.jpeg" class="img-fluid" alt="">
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content">
               <h3>Teach Lead &amp; Senior Backend Developer.</h3>
