--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
       </section>   
   
-      <!-- ======= Skills Section ======= -->
+      <!-- ======= Skills Section ======= 
       <section id="skills" class="skills section-bg">
         <div class="container" data-aos="fade-up">
   
@@ -193,7 +193,7 @@
           </div>
   
         </div>
-      </section><!-- End Skills Section -->
+      </section>-->
   
       <!-- ======= Resume Section ======= -->
       <section id="resume" class="resume">
