--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>          
+          <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-walk"></i> <span>Skills</span></a></li>          
+          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>   
+          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>       
           <li><a href="#testimonials" class="nav-link scrollto"><i class="bx bx-server"></i> <span>testimonials</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
@@ -51,7 +52,7 @@
     <section id="hero" class="d-flex flex-column justify-content-center">
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
         <h1>Eduardo Valderrama</h1>
-        <p>I'm <span class="typed" data-typed-items="Software Engineer, Developer, Technical Lead, Team and Project Manager"></span></p>
+        <p>I'm a<span class="typed" data-typed-items="Software Engineer, Developer, Technical Lead, Team and Project Manager"></span></p>
         <div class="social-links">          
           <a href="https://www.linkedin.com/in/eduardovalderramamurillo/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/Eduval84" class="github"><i class="bx bxl-github"></i></a>
@@ -103,99 +104,34 @@
         </div>
       </section>   
   
-      <!-- ======= Skills Section ======= 
+      <!-- ======= Skills Section ======= -->
       <section id="skills" class="skills section-bg">
         <div class="container" data-aos="fade-up">
   
           <div class="section-title">
             <h2>Skills</h2>
             <p>I am a backend developer,I haven`t problem going out of my comfort zone to learn new languages or frameworks. I have experience working with .Net Framework applications developed with Microsofot Visual Studio (versions 2003 to 2022). SQL, API Rest, HTML5, CSS, bootstrap, JavaScript, Angular, VUE, Distributed Version Control Systems (Git, SubVersion, TFS), Entity Framework.</p>
-          </div>
-  
-          <div class="row skills-content">
+          </div>   
 
-            <div class="col-lg-6">
-  
-              <div class="progress">
-                <span class="skill">C# <i class="val">90%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-  
-              <div class="progress">
-                <span class="skill">SQL <i class="val">85%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-  
-              <div class="progress">
-                <span class="skill">API Rest <i class="val">90%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-
-              <div class="progress">                
-                <span class="skill">Java <i class="val">60%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">CI/CD <i class="val">85%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-  
-            </div>
-  
-            <div class="col-lg-6">
-  
-              <div class="progress">
-                <span class="skill">HTML 5<i class="val">80%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-  
-              <div class="progress">
-                <span class="skill">CSS <i class="val">75%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-  
-              <div class="progress">
-                <span class="skill">JavaScript <i class="val">60%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">Angular <i class="val">40%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">VUE <i class="val">60%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-
-            </div>           
-  
-          </div>
-  
+          <div class="skills__container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
+          <div class="skills__item"><img src="assets/img/skills/csharp.png" alt="C# icon" class="skills__icon"><p class="skills__text"></p>C#</div>
+          <div class="skills__item"><img src="assets/img/skills/Java.png" alt="Java icon" class="skills__icon"><p class="skills__text"></p>Java</div>                 
+          <div class="skills__item"><img src="assets/img/skills/Js.png" alt="JavaScript icon" class="skills__icon"><p class="skills__text">JavaScript</p></div>
+          <div class="skills__item"><img src="assets/img/skills/Ts.png" alt="TypeScript icon" class="skills__icon"><p class="skills__text"></p>TypeScript</div>
+          <div class="skills__item"><img src="assets/img/skills/angular.png" alt="Angular icon" class="skills__icon"><p class="skills__text"></p>Angular</div>          
+          <div class="skills__item"><img src="assets/img/skills/Html.png" alt="HTML icon" class="skills__icon"><p class="skills__text"></p>HTML</div>
+          <div class="skills__item"><img src="assets/img/skills/css.png" alt="CSS icon" class="skills__icon"><p class="skills__text"></p>CSS</div>
+          <div class="skills__item"><img src="assets/img/skills/SQL.png" alt="SQL Server icon" class="skills__icon"><p class="skills__text"></p>SQL Server</div>
+          <div class="skills__item"><img src="assets/img/skills/mongodblogo-150x150.png" alt="Mongo DB icon" class="skills__icon"><p class="skills__text"></p>Mongo DB</div>
+          <div class="skills__item"><img src="assets/img/skills/git.jfif" alt="Git icon" class="skills__icon"><p class="skills__text"></p>Git</div>   
+          <div class="skills__item"><img src="assets/img/skills/AzureDevops.png" alt="Azure Devops icon" class="skills__icon"><p class="skills__text"></p>Azure Devops</div>   
+          <div class="skills__item"><img src="assets/img/skills/docker.jfif" alt="Docker icon" class="skills__icon"><p class="skills__text"></p>Docker</div>
+          <div class="skills__item"><img src="assets/img/skills/K8.png" alt="Kubernetes icon" class="skills__icon"><p class="skills__text"></p>Kubernetes</div>
+          <div class="skills__item"><img src="assets/img/skills/Jira.jpg" alt="Jira icon" class="skills__icon"><p class="skills__text"></p>Jira</div>
+          <div class="skills__item"><img src="assets/img/skills/Jenkins.png" alt="Jenkins icon" class="skills__icon"><p class="skills__text"></p>Jenkins</div>
+               
         </div>
-      </section>-->
+      </section>
   
       <!-- ======= Portfolio Section ======= -->
       <section id="portfolio" class="portfolio section-bg">
