--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
           <div class="skills__container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
           <div class="skills__item"><img src="assets/img/skills/csharp.png" alt="C# icon" class="skills__icon"><p class="skills__text"></p>C#</div>
-          <div class="skills__item"><img src="assets/img/skills/Java.png" alt="Java icon" class="skills__icon"><p class="skills__text"></p>Java</div>                 
+          <div class="skills__item"><img src="assets/img/skills/java.png" alt="Java icon" class="skills__icon"><p class="skills__text"></p>Java</div>                 
           <div class="skills__item"><img src="assets/img/skills/Js.png" alt="JavaScript icon" class="skills__icon"><p class="skills__text">JavaScript</p></div>
           <div class="skills__item"><img src="assets/img/skills/Ts.png" alt="TypeScript icon" class="skills__icon"><p class="skills__text"></p>TypeScript</div>
           <div class="skills__item"><img src="assets/img/skills/angular.png" alt="Angular icon" class="skills__icon"><p class="skills__text"></p>Angular</div>          
