--- a/index.html
+++ b/index.html
@@ -111,25 +111,24 @@
           <div class="section-title">
             <h2>Skills</h2>
             <p>I am a backend developer,I haven`t problem going out of my comfort zone to learn new languages or frameworks. I have experience working with .Net Framework applications developed with Microsofot Visual Studio (versions 2003 to 2022). SQL, API Rest, HTML5, CSS, bootstrap, JavaScript, Angular, VUE, Distributed Version Control Systems (Git, SubVersion, TFS), Entity Framework.</p>
-          </div>   
+          </div>        
 
           <div class="skills__container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
-          <div class="skills__item"><img src="assets/img/skills/csharp.png" alt="C# icon" class="skills__icon"><p class="skills__text"></p>C#</div>
-          <div class="skills__item"><img src="assets/img/skills/java.png" alt="Java icon" class="skills__icon"><p class="skills__text"></p>Java</div>                 
-          <div class="skills__item"><img src="assets/img/skills/Js.png" alt="JavaScript icon" class="skills__icon"><p class="skills__text">JavaScript</p></div>
-          <div class="skills__item"><img src="assets/img/skills/Ts.png" alt="TypeScript icon" class="skills__icon"><p class="skills__text"></p>TypeScript</div>
-          <div class="skills__item"><img src="assets/img/skills/angular.png" alt="Angular icon" class="skills__icon"><p class="skills__text"></p>Angular</div>          
-          <div class="skills__item"><img src="assets/img/skills/Html.png" alt="HTML icon" class="skills__icon"><p class="skills__text"></p>HTML</div>
-          <div class="skills__item"><img src="assets/img/skills/css.png" alt="CSS icon" class="skills__icon"><p class="skills__text"></p>CSS</div>
-          <div class="skills__item"><img src="assets/img/skills/SQL.png" alt="SQL Server icon" class="skills__icon"><p class="skills__text"></p>SQL Server</div>
-          <div class="skills__item"><img src="assets/img/skills/mongodblogo-150x150.png" alt="Mongo DB icon" class="skills__icon"><p class="skills__text"></p>Mongo DB</div>
-          <div class="skills__item"><img src="assets/img/skills/git.jfif" alt="Git icon" class="skills__icon"><p class="skills__text"></p>Git</div>   
-          <div class="skills__item"><img src="assets/img/skills/AzureDevops.png" alt="Azure Devops icon" class="skills__icon"><p class="skills__text"></p>Azure Devops</div>   
-          <div class="skills__item"><img src="assets/img/skills/docker.jfif" alt="Docker icon" class="skills__icon"><p class="skills__text"></p>Docker</div>
-          <div class="skills__item"><img src="assets/img/skills/K8.png" alt="Kubernetes icon" class="skills__icon"><p class="skills__text"></p>Kubernetes</div>
-          <div class="skills__item"><img src="assets/img/skills/Jira.jpg" alt="Jira icon" class="skills__icon"><p class="skills__text"></p>Jira</div>
-          <div class="skills__item"><img src="assets/img/skills/Jenkins.png" alt="Jenkins icon" class="skills__icon"><p class="skills__text"></p>Jenkins</div>
-               
+            <div class="skills__item"><img src="assets/img/skills/csharp.png" alt="C# icon" class="skills__icon"><p class="skills__text"></p>C#</div>
+            <div class="skills__item"><img src="assets/img/skills/java.png" alt="Java icon" class="skills__icon"><p class="skills__text"></p>Java</div>                 
+            <div class="skills__item"><img src="assets/img/skills/Js.png" alt="JavaScript icon" class="skills__icon"><p class="skills__text"></p>JavaScript</div>
+            <div class="skills__item"><img src="assets/img/skills/Ts.png" alt="TypeScript icon" class="skills__icon"><p class="skills__text"></p>TypeScript</div>
+            <div class="skills__item"><img src="assets/img/skills/angular.png" alt="Angular icon" class="skills__icon"><p class="skills__text"></p>Angular</div>          
+            <div class="skills__item"><img src="assets/img/skills/Html.png" alt="HTML icon" class="skills__icon"><p class="skills__text"></p>HTML</div>
+            <div class="skills__item"><img src="assets/img/skills/css.png" alt="CSS icon" class="skills__icon"><p class="skills__text"></p>CSS</div>
+            <div class="skills__item"><img src="assets/img/skills/SQL.png" alt="SQL Server icon" class="skills__icon"><p class="skills__text"></p>SQL Server</div>
+            <div class="skills__item"><img src="assets/img/skills/mongodblogo-150x150.png" alt="Mongo DB icon" class="skills__icon"><p class="skills__text"></p>Mongo DB</div>
+            <div class="skills__item"><img src="assets/img/skills/git.jfif" alt="Git icon" class="skills__icon"><p class="skills__text"></p>Git</div>   
+            <div class="skills__item"><img src="assets/img/skills/AzureDevops.png" alt="Azure Devops icon" class="skills__icon"><p class="skills__text"></p>Azure Devops</div>   
+            <div class="skills__item"><img src="assets/img/skills/docker.jfif" alt="Docker icon" class="skills__icon"><p class="skills__text"></p>Docker</div>
+            <div class="skills__item"><img src="assets/img/skills/K8.png" alt="Kubernetes icon" class="skills__icon"><p class="skills__text"></p>Kubernetes</div>
+            <div class="skills__item"><img src="assets/img/skills/Jira.jpg" alt="Jira icon" class="skills__icon"><p class="skills__text"></p>Jira</div>
+            <div class="skills__item"><img src="assets/img/skills/Jenkins.png" alt="Jenkins icon" class="skills__icon"><p class="skills__text"></p>Jenkins</div>     
         </div>
       </section>
   
