--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="utl-8">
     <meta content="width=device-width, intial-cale=1.0" name="viewport">
 
-    <title>Portfolio Eduardo Valderrama</title>
+    <title>Eduardo Valderrama</title>
     <meta content="Portfolio profesional Eduardo Valderrama Murillo" name="description">    
     <meta content="Software Engineer portfolio of Eduardo Valderrama Murillo, Teach Lead, C#, FullStack, Backend Developer, Frontend Developer,HTML, CSS, JavaScript, Professional developer with more than 15 years of experience" name="keywords">
 
       <!-- Favicons -->
-    <link href="assets/img/EvLogoCreative.png" rel="icon"> 
-    <link href="assets/img/EvLogoCreative.png" rel="apple-touch-icon">     
+    <link href="assets/img/logoPeq.png" rel="icon"> 
+    <link href="assets/img/logoPeq.png" rel="apple-touch-icon">   
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -521,7 +521,7 @@
         <div class="copyright">
           &copy; Copyright <strong><span>Eduardo Valderrama</span></strong>. All Rights Reserved
         </div>                 
-          Designed by <a href="https://eduval.dev/">Eduval.dev</a>
+          <a>Designed by Eduval.dev <img src="assets/img/logoPeq.png" alt="eduval.dev logo"></a>            
         </div>
       </div>
     </footer>
