Comment contact section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>   
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>       
           <li><a href="#testimonials" class="nav-link scrollto"><i class="bx bx-server"></i> <span>testimonials</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+           <!--<li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>-->
         </ul>
       </nav>
     </header>
@@ -449,7 +449,7 @@
               </div>
       </section><!-- End Resume Section -->
   
-      <!-- ======= Contact Section ======= -->
+      <!-- ======= Contact Section ======= 
       <section id="contact" class="contact">
         <div class="container" data-aos="fade-up">
   
@@ -504,7 +504,7 @@
           </div>
   
         </div>
-      </section>
+      </section>-->
   
     </main>
   
