--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <img src="assets/img/profile-img2.jpeg" class="img-fluid" alt="">
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content">
-              <h3>Teach Lead &amp; Senior Backend Developer                
+              <h3>Tech Lead &amp; Senior Backend Developer                
               </h3>
               <p>I'm passionate about software, new technologies, best practices, clean architecture, SOLID, design patterns.</p>
               <div class="row">
