Fix teach to tech

--- a/index.html
+++ b/index.html
@@ -390,14 +390,14 @@
                   <div class="col-lg-6">
                     <h3 class="resume-title">Professional Experience</h3>
                     <div class="resume-item">
-                      <h4>Teach Lead</h4>
+                      <h4>Tech Lead</h4>
                       <h5>Jan 2022 - Present</h5>
                       <p><em><a href="https://www.linkedin.com/company/grupo-domingo-alonso/mycompany/verification/">Domingo Alonso Group</a></em></p>
                       <ul>
                         <li>Lead the design, development and implementation of Diler, the group's web sales assistant.</li>
                         <li>Develop tasks together with the other members of the development team and advise on all aspects of the project. </li>
                         <li>Oversee the evaluation and career development of all team members..</li>
-                        <li>Define together with the rest of the Teach Leads the quality standard to be followed by the company, the technological roadmap and review/improve existing processes .</li>
+                        <li>Define together with the rest of the Tech Leads the quality standard to be followed by the company, the technological roadmap and review/improve existing processes .</li>
                       </ul>
                     </div>
                     <div class="resume-item">
